--- a/Instgram_Followers_Data.ipynb
+++ b/Instgram_Followers_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import time\n",
@@ -27,13 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "#website\n",
     "url = 'https://www.instagram.com'\n",
-    "username = 'XXXXXXXX' # <<<<<<< ENTER USERNAME HERE\n",
-    "password = 'XXXXXXXX' # <<<<<<< ENTER PASSWORD HERE"
+    "username = 'unsendedmsg' # <<<<<<< ENTER USERNAME HERE\n",
+    "password = 'deqkeq-sumpeX-nomku3' # <<<<<<< ENTER PASSWORD HERE"
    ],
    "metadata": {
     "collapsed": false
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# get the driver and open the url\n",
@@ -134,7 +134,7 @@
     "        time.sleep(.5)\n",
     "        followers_list = driver.find_elements(By.XPATH, \"//div[@class='_ab8w  _ab94 _ab99 _ab9h _ab9m _ab9o _abcm']/div[1]/div/div/span/a\")\n",
     "        followers_list_count = len(followers_list)\n",
-    "        if followers_list_count == followers_count:\n",
+    "        if followers_list_count > 100:\n",
     "            break\n",
     "\n",
     "#append the followers list\n",
@@ -163,7 +163,10 @@
     "full_list_of_followers"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
@@ -174,7 +177,10 @@
     "len(full_list_of_followers)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
@@ -188,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "df = pd.DataFrame({\"Followers\":full_list_of_followers})\n",
@@ -264,23 +270,23 @@
     "if pageNotAvailable(\"//div[@class='_ab8w  _ab94 _ab99 _ab9h _ab9m _ab9p  _aba4 _abag _abcm']/h2\") is True:\n",
     "    pass\n",
     "\n",
-    "        # for the privet profiles\n",
-    "        if check(\"//div[@class='_aa_t']\") is True:\n",
-    "            #profile information\n",
-    "            posts = driver.find_element(By.XPATH, \"//ul[@class='x78zum5 x1q0g3np xieb3on']/li[1]/div/span\")\n",
-    "            followers = driver.find_element(By.XPATH, \"//ul[@class='x78zum5 x1q0g3np xieb3on']/li[2]/div/span\")\n",
-    "            following = driver.find_element(By.XPATH, \"//ul[@class='x78zum5 x1q0g3np xieb3on']/li[3]/div/span\")\n",
-    "        # for the public profiles\n",
-    "        else:\n",
-    "            posts = driver.find_element(By.XPATH, \"//ul[@class='x78zum5 x1q0g3np xieb3on']/li[1]/div/span\")\n",
-    "            followers = driver.find_element(By.XPATH, \"//ul[@class='x78zum5 x1q0g3np xieb3on']/li[2]/a/div/span\")\n",
-    "            following = driver.find_element(By.XPATH, \"//ul[@class='x78zum5 x1q0g3np xieb3on']/li[3]/a/div/span\")\n",
+    "    # for the privet profiles\n",
+    "    if check(\"//div[@class='_aa_t']\") is True:\n",
+    "        #profile information\n",
+    "        posts = driver.find_element(By.XPATH, \"//ul[@class='x78zum5 x1q0g3np xieb3on']/li[1]/div/span\")\n",
+    "        followers = driver.find_element(By.XPATH, \"//ul[@class='x78zum5 x1q0g3np xieb3on']/li[2]/div/span\")\n",
+    "        following = driver.find_element(By.XPATH, \"//ul[@class='x78zum5 x1q0g3np xieb3on']/li[3]/div/span\")\n",
+    "    # for the public profiles\n",
+    "    else:\n",
+    "        posts = driver.find_element(By.XPATH, \"//ul[@class='x78zum5 x1q0g3np xieb3on']/li[1]/div/span\")\n",
+    "        followers = driver.find_element(By.XPATH, \"//ul[@class='x78zum5 x1q0g3np xieb3on']/li[2]/a/div/span\")\n",
+    "        following = driver.find_element(By.XPATH, \"//ul[@class='x78zum5 x1q0g3np xieb3on']/li[3]/a/div/span\")\n",
     "\n",
-    "        # Append data in the dic\n",
-    "        followesDetails[\"Profile\"].append(i)\n",
-    "        followesDetails[\"Posts Count\"].append(posts.text)\n",
-    "        followesDetails[\"Followers\"].append(followers.text)\n",
-    "        followesDetails[\"Following\"].append(following.text)"
+    "    # Append data in the dic\n",
+    "    followesDetails[\"Profile\"].append(i)\n",
+    "    followesDetails[\"Posts Count\"].append(posts.text)\n",
+    "    followesDetails[\"Followers\"].append(followers.text)\n",
+    "    followesDetails[\"Following\"].append(following.text)"
    ],
    "metadata": {
     "collapsed": false,
@@ -313,10 +319,7 @@
     "dfFinal"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
@@ -327,6 +330,15 @@
     "# Data Frame to CSV final list\n",
     "dfFinal.to_csv(\"Full_Details_Final.csv\")"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
