--- a/Instgram_Followers_Data.ipynb
+++ b/Instgram_Followers_Data.ipynb
@@ -134,7 +134,7 @@
     "        time.sleep(.5)\n",
     "        followers_list = driver.find_elements(By.XPATH, \"//div[@class='_ab8w  _ab94 _ab99 _ab9h _ab9m _ab9o _abcm']/div[1]/div/div/span/a\")\n",
     "        followers_list_count = len(followers_list)\n",
-    "        if followers_list_count > 100:\n",
+    "        if followers_list_count == followers_count :\n",
     "            break\n",
     "\n",
     "#append the followers list\n",
